--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -24,69 +24,114 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/root/.config/i3/i3blocks/$BLOCK_NAME
+command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+
 [window name]
-label=>>>
 interval=1
-color=#20c1ef
+#color=#20c1ef
 #command= xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2
 command= xprop -id $(xdotool getactivewindow) | grep '_NET_WM_NAME(UTF8_STRING)' | cut -d'"' -f2
-min_width='#command= xprop -id $(xdotool getactivewindow) | grep 'WM_NAME(STRING)' | cut -d'"' -f2                                      '
+min_width=''
+
+
+
 
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-#[volume]
+[volume]
 #label=VOL
-#label=♪
-#instance=Master
+label=♪
+instance=Master
 #instance=PCM
-#interval=1
-#signal=10
+interval=3
+signal=10
 
+# Memory usage
+#
+# The type defaults to "mem" if the instance is not specified.
+[memory]
+label=MEM
+separator=false
+interval=30
 
+[memory]
+label=SWAP
+instance=swap
+separator=false
+interval=30
 
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-#[disk]
-#label=HOME
+[disk]
+label=HOME
 #instance=/mnt/data
-#interval=30
+interval=30
 
-#[load_average]
-#interval=1
+[load_average]
+interval=5
+
+
+# Network interface monitoring
+#
+# If the instance is not specified, use the interface used for default route.
+# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+[iface]
+#instance=wlan0
+color=#00FF00
+interval=10
+separator=false
+
+[wifi]
+#instance=wlp3s0
+interval=10
+separator=false
+
+[bandwidth]
+#instance=eth0
+interval=5
+
+# CPU usage
+#
+# The script may be called with -w and -c switches to specify thresholds,
+# see the script for details.
+[cpu_usage]
+label=CPU
+interval=10
+min_width=CPU: 100.00%
+#separator=false
+
 
 # Battery indicator
 #
 # The battery instance defaults to 0.
-#[battery]
+[battery]
 #label=BAT
-#label=⚡
+label=⚡
 #instance=1
-#interval=30
+interval=30
 
 # Date Time
 #
 [time]
 command=date '+%c'
-color=#9acc54
-interval=1
+interval=5
 
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 #[mediaplayer]
-#instance=mplayer
-#interval=1
+#instance=spotify
+#interval=5
 #signal=10
 
 # OpenVPN support
@@ -101,8 +146,8 @@ interval=1
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [temperature]
-interval=3
-color=#ef0000
+#label=TEMP
+interval=10
 
 # Key indicators
 #
@@ -110,62 +155,14 @@ color=#ef0000
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
-#separator=false
+[keyindicator]
+instance=CAPS
+interval=1
+signal=11
+min_width='   '
 
 #[keyindicator]
 #instance=NUM
 #interval=once
 #signal=11
 
-
-
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-#[iface]
-#instance=wlp2s0
-#color=#00FF00
-#interval=3
-#separator=false
-
-#[wifi]
-#instance=wlp2s0
-#interval=3
-#separator=false
-
-[bandwidth]
-instance=wlp2s0
-color=#73a2b4
-interval=1
-
-
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-#label=RAM
-separator=false
-color=#efef00
-interval=3
-
-[memory]
-#label=SWAP
-instance=swap
-#separator=false
-color=#efef00
-interval=3
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-[cpu_usage]
-#label=CPU
-interval=3
-color=#b86487
-min_width=100.00%
